done order. continue on search product, page, products in category, products in brand, order, change password.

--- a/OnovaStore/Views/Category/_Layout.cshtml
+++ b/OnovaStore/Views/Category/_Layout.cshtml
@@ -1756,6 +1756,7 @@
             </nav>
             <!-- End Pagination -->
         </div>
+    @RenderBody()
         <!-- End Products -->
         <!-- Call to Action -->
         <div class="g-bg-primary">
