--- a/OnovaStore/Views/Product/Detail.cshtml
+++ b/OnovaStore/Views/Product/Detail.cshtml
@@ -114,11 +114,11 @@
                         <ul class="list-unstyled g-color-text">
                             <li class="g-brd-bottom--dashed g-brd-gray-light-v3 pt-1 mb-3">
                                 <span>Brand Name:</span>
-                                <span class="float-right g-color-black">@Model.brandName</span>
+                                <span class="float-right g-color-black"><a href="@Model.brandSlug">@Model.brandName</a></span>
                             </li>
                             <li class="g-brd-bottom--dashed g-brd-gray-light-v3 pt-1 mb-3">
                                 <span>Category Name:</span>
-                                <span class="float-right g-color-black">@Model.categoryName</span>
+                                <span class="float-right g-color-black"><a href="@Model.categorySlug">@Model.categoryName</a></span>
                             </li>
                         </ul>
                         <!-- End List -->
