Continue on user setting

--- a/OnovaStore/Views/Shared/_LoginPartial.cshtml
+++ b/OnovaStore/Views/Shared/_LoginPartial.cshtml
@@ -18,16 +18,16 @@
         </a>
         <ul id="account-dropdown-2" class="list-unstyled u-shadow-v29 g-pos-abs g-bg-white g-width-160 g-pb-5 g-mt-19 g-z-index-2"
             aria-labelledby="account-dropdown-invoker-2">
-            <li>
-                    <a class="d-block g-color-text g-color-primary--hover g-text-underline--none--hover g-font-weight-400 g-py-5 g-px-20" href="#">
-                        Order List
-                    </a>
-                </li>
-            <li>
-                <a class="d-block g-color-text g-color-primary--hover g-text-underline--none--hover g-font-weight-400 g-py-5 g-px-20" href="#">
-                    Wishlist
-                </a>
-            </li>
+@*            <li>*@
+@*                    <a class="d-block g-color-text g-color-primary--hover g-text-underline--none--hover g-font-weight-400 g-py-5 g-px-20" href="#">*@
+@*                        Order List*@
+@*                    </a>*@
+@*                </li>*@
+@*            <li>*@
+@*                <a class="d-block g-color-text g-color-primary--hover g-text-underline--none--hover g-font-weight-400 g-py-5 g-px-20" href="#">*@
+@*                    Wishlist*@
+@*                </a>*@
+@*            </li>*@
             <li>
                 <a class="d-block g-color-text g-color-primary--hover g-text-underline--none--hover g-font-weight-400 g-py-5 g-px-20" href="#">
                     Account Settings
